zamiana podwojnych tabow na pojedyncze